--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10429,7 +10429,7 @@ ul.products li.product, .products .owl-item > .product {
       border: 2px solid #ffcd00; }
   ul.products li.product .product-inner, .products .owl-item > .product .product-inner {
     padding: 0;
-    height: 100%;
+    /* height: 100%; */
     position: relative; }
   ul.products li.product .product-outer, .products .owl-item > .product .product-outer {
     position: relative; }
@@ -12640,7 +12640,8 @@ ul.products li.product, .products .owl-item > .product {
   text-align: center; }
 .page-template-template-aboutpage .feature-head {
   text-align: center;
-  margin-bottom: 58px; }
+  margin-bottom: 58px;
+  margin-top: -7rem; }
 .page-template-template-aboutpage .site-header {
   margin-bottom: 0; }
 .page-template-template-aboutpage .section-title, .page-template-template-aboutpage .error404 .page-content section h2, .error404 .page-content section .page-template-template-aboutpage h2, .page-template-template-aboutpage .error404 .fourohfour-columns-2 .col-1 h2, .error404 .fourohfour-columns-2 .col-1 .page-template-template-aboutpage h2, .page-template-template-aboutpage .related > h2:first-child, .page-template-template-aboutpage .upsells > h2:first-child, .page-template-template-aboutpage .woocommerce-cart .cart-collaterals + .cross-sells h2, .woocommerce-cart .cart-collaterals + .cross-sells .page-template-template-aboutpage h2 {
@@ -12685,10 +12686,11 @@ ul.products li.product, .products .owl-item > .product {
     margin-bottom: 0; }
   .pizzaro-basics .blocks {
     padding: 5.071em 0 4.2em 0;
-    display: inline-block; }
+    display: inline-block;
+    margin-top: -3rem; }
 
 .pizzaro-brands {
-  padding: 140px 0; }
+  padding: 10px 0; }
   .pizzaro-brands .section-title, .pizzaro-brands .error404 .page-content section h2, .error404 .page-content section .pizzaro-brands h2, .pizzaro-brands .error404 .fourohfour-columns-2 .col-1 h2, .error404 .fourohfour-columns-2 .col-1 .pizzaro-brands h2, .pizzaro-brands .related > h2:first-child, .pizzaro-brands .upsells > h2:first-child, .pizzaro-brands .woocommerce-cart .cart-collaterals + .cross-sells h2, .woocommerce-cart .cart-collaterals + .cross-sells .pizzaro-brands h2 {
     margin-bottom: 1em; }
   .pizzaro-brands ul {
@@ -12711,7 +12713,7 @@ ul.products li.product, .products .owl-item > .product {
   margin-bottom: 116px; }
 
 .pizzaro-about-features {
-  margin-bottom: 78px; }
+  margin-bottom: -2rem; }
 
 .brands-section {
   margin-bottom: 7.643em; }
@@ -12722,9 +12724,9 @@ ul.products li.product, .products .owl-item > .product {
   margin-bottom: 0; }
 
 .page-template-template-contactpage .contact-header {
-  padding-bottom: 22px;
+  padding-bottom: 10px;
   text-align: center;
-  margin-bottom: 74px; }
+  margin-bottom: 1.2rem; }
 .page-template-template-contactpage .site-header {
   margin-bottom: 0; }
 .page-template-template-contactpage .entry-title {
@@ -14872,7 +14874,7 @@ p.order-again .button:after {
     .section-product .product-wrapper .product-inner header {
       font-size: 7em; }
   .pizzaro-brands {
-    padding: 100px 0; }
+    padding: 10px 0; }
   .section-products-carousel-with-image {
     height: auto; }
   .section-tiled-gallery {
@@ -15720,3 +15722,13 @@ p.order-again .button:after {
     padding-right: 15px; }
   .single-product.style-3 div.product .images .thumbnails {
     margin: 0; } }
+
+
+
+    .email-view{
+      margin-top: 1.5rem;
+    }
+
+    .button-adjust{
+      margin-top:2rem;
+    }
