--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2820,7 +2820,7 @@ body {
 
 .site-content {
   outline: none; 
-  margin-bottom: -8rem;}
+  margin-bottom: -2rem;}
 
 .page-template-template-homepage .site-main {
   padding-top: 4.236em; }
@@ -16518,4 +16518,47 @@ a:hover, a:focus, a:visited {
   position: relative;
   margin-bottom: 11rem;
 }
+}
+.promo-section {
+  width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    left: 50%;
+    margin-top: 3rem;
+}
+.bd-bottom {
+    border-bottom: 1px solid #eaeaea;
+}
+.bg-grey {
+    background-color: #fafafa;
+}
+.padding {
+    padding: 5rem 0;
+}
+.promo-content {
+  padding: 30px 15px;
+  border: 1px dashed #ddd;
+  overflow: hidden;
+  transition: all .2s ease-in-out;
+}
+.promo-content i {
+  font-size: 40px;
+  color: #1da1f2;
+  margin-bottom: 15px;
+}
+.promo-content h3 {
+  margin-bottom: 5px;
+  font-size: 18px;
+  margin: 0 0 10px;
+  font-weight: 600;
+  line-height: 1.7;
+  color: #333;
+  letter-spacing: -.01em;
+  font-family: roboto,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  color: #333;
+}
+.promo-content p {
+  margin-bottom: 0;
+  font-size: 15px;
 }
