--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10157,7 +10157,8 @@ article.post {
   .header-v1 .main-navigation ul li.yamm-fw ul.sub-menu, .header-v3 .main-navigation ul li.yamm-fw ul.sub-menu {
     left: 0; }
   .header-v1 .primary-navigation ul.menu, .header-v1 .primary-navigation ul.nav-menu, .header-v3 .primary-navigation ul.menu, .header-v3 .primary-navigation ul.nav-menu {
-    position: relative; } }
+    position: relative; 
+    padding-right: 7rem; } }
 
 @media (max-width: 767px) {
   .home-v7 .newsletter-subscription form input, .home-v7 .site-footer.footer-v5 .footer-newsletter form input, .site-footer.footer-v5 .home-v7 .footer-newsletter form input, .home-v5 .newsletter-subscription form input, .home-v5 .site-footer.footer-v5 .footer-newsletter form input, .site-footer.footer-v5 .home-v5 .footer-newsletter form input {
@@ -15483,7 +15484,7 @@ p.order-again .button:after {
       margin-top: 10px; }
   .header-v1 .header-wrap {
     justify-content: space-between;
-    margin-bottom: 0; }
+    margin-bottom: -1rem; }
   .header-v1.site-header .main-navigation {
     margin-top: 0; } }
 
@@ -15731,10 +15732,11 @@ p.order-again .button:after {
     margin: 0; } }
 
 
-
-    .email-view{
-      margin-top: 1.5rem;
-    }
+    @media only screen and (max-width: 990px){
+      .email-view{
+        margin-top: 1.5rem;
+      }
+      }
 
     .button-adjust{
       margin-top:2rem;
