--- a/public/assets/css/colors/red.css
+++ b/public/assets/css/colors/red.css
@@ -23,7 +23,7 @@ button, input[type="button"], input[type="reset"], input[type="submit"], .button
   border-color: #f31e40; }
 
 button, .button:hover, .added_to_cart:hover, #respond input[type=submit], input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover, .dark .create-your-own a:hover, .wc-proceed-to-checkout .button, .main-navigation ul.menu ul a:hover, .main-navigation ul.menu ul li:hover > a, .main-navigation ul.nav-menu ul a:hover, .main-navigation ul.nav-menu ul li:hover > a, .main-navigation div.menu ul.nav-menu ul a:hover, .main-navigation div.menu ul.nav-menu ul li:hover > a, .stretch-full-width .store-locator .store-search-form form .button:hover {
-  background-color: #99081f; }
+  background-color: #CC4205; }
 
 #respond input[type=submit]:hover {
   background-color: #86071b; }
