--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2469,7 +2469,7 @@ select {
   color: #484848;
   text-align: center;
   padding-bottom: 0.692em;
-  margin-bottom: 2.692em;
+  /* margin-bottom: 2.692em; */
   border-bottom: 1px solid #e9e9e9;
   position: relative; }
   .section-title::after, .error404 .page-content section h2::after, .error404 .fourohfour-columns-2 .col-1 h2::after, .related > h2:first-child::after, .upsells > h2:first-child::after, .woocommerce-cart .cart-collaterals + .cross-sells h2::after {
@@ -7066,7 +7066,8 @@ ul.products > li.product {
 .header-v2 .site-branding {
   width: 100%;
   text-align: center;
-  padding: 0; }
+  padding: 0; 
+  display: none;}
   @media (min-width: 768px) {
     .header-v2 .site-branding {
       width: 16.6666666667%; } }
@@ -10006,13 +10007,13 @@ article.post {
       font-family: "Open Sans";
       display: inline-block; }
     .site-content .home-v1-slider .owl-carousel .slider-1 .title {
-      font-size: 0.824em;
+      font-size: 60px;
       line-height: 1em;
       font-weight: 700;
       text-align: center;
       padding-bottom: 0.059em; }
     .site-content .home-v1-slider .owl-carousel .slider-1 .sub-title {
-      font-size: 0.482em;
+      font-size: 25px;
       line-height: 1;
       font-weight: 300;
       text-align: center;
@@ -16580,3 +16581,51 @@ a:hover, a:focus, a:visited {
     display: none;
   }
   }
+
+@media only screen and (max-width: 504px){
+.footer-v1.site-footer .footer-social-icons .social-icons > li + li {
+  margin-left: 1rem; 
+}
+}
+
+.btn_action{
+  font-size: 40px;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  display: inline;
+  background-color: #CC4205;
+  border: 1px solid #CC4205;
+  color: #fff;
+  transition: all .3s;
+  overflow: hidden;
+  z-index: 1;
+}
+.btn_action a {
+  padding: 1rem;
+  color: #ccc;
+  font-size: 25px;
+}
+.btn_action:hover,
+.btn_action:active {
+  background-image: linear-gradient(
+    145deg,
+    transparent 10%,
+    #93490C 90% 100%
+  );
+  animation: background 10s linear infinite;
+}
+
+@keyframes background {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 400px 0;
+  }
+}
+@media only screen and (max-width: 1199px){
+  .header-v2 .site-branding {
+    display: inline-block;
+  }
+}
+
