--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9279,7 +9279,7 @@ article.post {
 
 .pizzaro-breadcrumb {
   margin-top: -1.786em;
-  margin-bottom: 3em;
+  margin-bottom: 3rem;
   border-bottom: 1px solid #e9e9e9; }
 
 .woocommerce-breadcrumb {
@@ -9719,10 +9719,10 @@ article.post {
     top: 32px; } }
 
 .terms-conditions .hentry.type-page .entry-header, .terms-conditions .entry-header, .faq .hentry.type-page .entry-header, .faq .entry-header {
-  padding-bottom: 22px;
+  padding-bottom: 1rem;
   border-bottom: 1px solid #eee;
   text-align: center;
-  margin-bottom: 74px; }
+  margin-bottom: 1rem; }
 .terms-conditions .entry-header .entry-title, .faq .entry-header .entry-title {
   font-size: 2.125em;
   font-weight: normal;
@@ -9740,8 +9740,8 @@ article.post {
 .terms-conditions .entry-content h1, .faq .entry-content h1 {
   font-size: 1.563em;
   font-weight: normal;
-  margin-top: 0;
-  margin-bottom: 2em; }
+  margin-top: 1rem;
+  margin-bottom: -1rem; }
 
 .page-template-template-homepage-v6 .products-1 ul.products li.product:hover .hover-area, .page-template-template-homepage-v6 .products-2 ul.products li.product:hover .hover-area {
   padding-bottom: 0; }
