--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4338,7 +4338,8 @@ embed, iframe, object, video {
     font-size: 1.5em;
     margin-bottom: 1.542em; }
   .footer-about-info .content {
-    padding-left: 20px; }
+    padding-left: 20px;
+    width: 50%; }
   .footer-about-info p {
     color: #666666;
     margin-bottom: 1.8em; }
@@ -16629,3 +16630,182 @@ a:hover, a:focus, a:visited {
   }
 }
 
+.bd-bottom {
+  border-bottom: 1px solid #eaeaea;
+  background-color: #f5f5f5;
+}
+.padding {
+  padding-top: 50px;
+  padding-bottom: 1rem;
+}
+.content-details h2 {
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 20px;
+  color: #333;
+  margin: 0 0 10px;
+  line-height: 1.1;
+  letter-spacing: -.04em;
+}
+.content-details p {
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+.default-btn {
+  background-color: #CC4205;
+  font-family: roboto,sans-serif;
+  font-size: 11px;
+  letter-spacing: 2px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #fff;
+  /* border-radius: 3px; */
+  padding: 10px 30px;
+  margin: 0;
+  display: inline-block;
+}
+.default-btn:hover,
+.default-btn:active {
+  color: #ccc;
+  background-image: linear-gradient(
+    145deg,
+    transparent 10%,
+    #93490C 80% 90%
+  );
+  animation: background 10s linear infinite;
+}
+
+@keyframes background {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 400px 0;
+  }
+}
+.xs-padding img {
+    border: none;
+    outline: none;
+    max-width: 100%;
+    transition: all .5s;
+    vertical-align: middle;
+}
+@media (max-width: 767px){
+.xs-padding {
+    padding: 15px;
+}
+}
+
+.pitch-2 {
+  width: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(/assets/images/cta.jpg) no-repeat center center;
+  background-size: cover;
+  padding: 50px 0 100px 0;
+  margin-bottom: 3rem;
+  width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    left: 50%;
+}
+.pitch-inner {
+  max-width: 500px;
+  float: right;
+}
+.pitch-inner h4 {
+  font-family: 'Nunito';
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.pitch-inner h1 {
+  font-family: 'Nunito';
+  font-size: 28px;
+  line-height: 1.2;
+  margin-top: 20px;
+  color: #FFFFFF;
+}
+.pitch-inner p {
+  font-family: 'Nunito';
+  font-size: 14px;
+  line-height: 1.5;
+  margin-top: 20px;
+  color: #FFFFFF;
+}
+.btn-action {
+  padding: 0.5rem 1.5rem;
+  background: #CC4205;
+  border: 1px solid #CC4205;
+  border-radius: .125rem;
+  color: #ccc;
+  box-shadow: 0 10px 30px rgba(65,205,82,.5);
+  margin: 24px 12px 0 0;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.btn-action:hover,
+.btn-action:active {
+  color: #ccc;
+  background-image: linear-gradient(
+    145deg,
+    transparent 10%,
+    #93490C 80% 90%
+  );
+  animation: background 10s linear infinite;
+}
+
+@keyframes background {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 400px 0;
+  }
+}
+
+
+.left-right-contents {
+  background: white;
+  width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    left: 50%;
+}
+.left-right-contents {
+  padding: 6rem 0 0;
+}
+.left-right-contents img {
+  max-width: 100%;
+  display: inline-block;
+}
+.left-right-contents .media {
+  margin-top: 78px;
+}
+.left-right-contents .media+.media {
+  margin-top: 65px;
+}
+
+@media (max-width: 767px){
+.left-right-contents img {
+    margin: 40px 0;
+}
+}
+@media (max-width: 991px){
+.left-right-contents img {
+    margin-top: 10%;
+    margin-bottom: 1rem;
+}
+}
+
+@media (max-width: 991px){
+.left-right-contents .media {
+  margin-top: 4rem;
+}
+}
+@media (max-width: 991px){
+.left-right-contents .media+.media {
+  margin-top: 2rem;
+}
+}
